--- a/02-Web_Fundamentals/index.html
+++ b/02-Web_Fundamentals/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Fundamentals Palace</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -21,37 +22,50 @@
 
     <!--My main content with each member of the family tree.-->
     <main>
-        <h2>King Kieron</h2>
-        <img src=".\Images\king.jpg" alt="King Kieron">
-        <p>My name is Kieron and I am the King. I like karate and kite surfing. My son <a href="#peter">Peter</a> is the
-            Heir to the throne.</p>
+        <div class="card">
+            <h2>King Kieron</h2>
+            <img src=".\Images\king.jpg" alt="King Kieron">
+            <p>My name is Kieron and I am the King. I like karate and kite surfing. My son <a href="#peter">Peter</a> is
+                the
+                Heir to the throne.</p>
+        </div>
 
-        <h3>Queen Queenie</h3>
-        <img src=".\Images\queen.jpg" alt="Queen Queenie">
-        <p>My name is Queenie and I am the Queen. I like quizzes, quiche and quinoa salads. Click <a
-                href="https://www.bbcgoodfood.com/recipes/collection/quinoa-salad-recipes" target="_blank">here</a> to
-            see my favourite
-            quinoa salad
-            recipes.
-        </p>
+        <div class="card">
+            <h3>Queen Queenie</h3>
+            <img src=".\Images\queen.jpg" alt="Queen Queenie">
+            <p>My name is Queenie and I am the Queen. I like quizzes, quiche and quinoa salads. Click <a
+                    href="https://www.bbcgoodfood.com/recipes/collection/quinoa-salad-recipes" target="_blank">here</a>
+                to
+                see my favourite
+                quinoa salad
+                recipes.
+            </p>
+        </div>
 
-        <h4 id="peter">Prince Peter</h4>
-        <img src=".\Images/prince-peter.jpg" alt="Prince Peter">
-        <p>My name is Peter the Price. I like posing and pizza! Follow me on instagram @pengprincepeter.</p>
+        <div class="card">
+            <h4 id="peter">Prince Peter</h4>
+            <img src=".\Images/prince-peter.jpg" alt="Prince Peter">
+            <p>My name is Peter the Price. I like posing and pizza! Follow me on instagram
+                <span>@pengprincepeter</span>.</p>
+        </div>
 
-        <h5>Pricess Penelope</h5>
-        <img src=".\Images\princess-penelope.jpg" alt="Princess Penelope">
-        <p>My name is Princess Penelope. I like lots of things...</p>
-        <ul>
-            <li>Pencils</li>
-            <li>Peanut Butter</li>
-            <li>Ponies</li>
-            <li>Pogo Sticks</li>
-        </ul>
+        <div class="card">
+            <h5>Pricess Penelope</h5>
+            <img src=".\Images\princess-penelope.jpg" alt="Princess Penelope">
+            <p>My name is Princess Penelope. I like lots of things...</p>
+            <ul id="penelope-list">
+                <li>Pencils</li>
+                <li>Peanut Butter</li>
+                <li>Ponies</li>
+                <li>Pogo Sticks</li>
+            </ul>
+        </div>
 
-        <h6>Susan</h6>
-        <img src=".\Images\susan.jpg" alt="Susan">
-        <p>I am King Kieron's mistress and Mother to the illigitimate Princess Penelope</p>
+        <div class="card">
+            <h6>Susan</h6>
+            <img src=".\Images\susan.jpg" alt="Susan">
+            <p>I am King Kieron's mistress and Mother to the illigitimate Princess Penelope</p>
+        </div>
     </main>
 
     <footer>
