--- a/02-Web_Fundamentals/Web Project/index.html
+++ b/02-Web_Fundamentals/Web Project/index.html
@@ -12,11 +12,14 @@
 
     <nav>
         <img src="C:\Users\USER\nology\nology-coursework\02-Web_Fundamentals\Web Project\Images\Missing-Logo.svg" alt="Dada Logo" id="logo">
-        <a href="#">Login</a>
+        <div>
+            <a href="#">Login</a>
+        </div>
+        
     </nav>
 
     <main>
-        <div>
+        <div class="text">
             <h1>A parenting coach in you pocket</h1>
         </div>
 
@@ -24,15 +27,15 @@
             <img src="C:\Users\USER\nology\nology-coursework\02-Web_Fundamentals\Web Project\Images\device mockup 1.svg" alt="Device mockup">
         </div>
 
-        <div>
+        <div class="text">
             <h2>Most parenting resources are built with Moms in mind.   </h2>
         </div>
 
-        <div>
+        <div class="text">
             <h3>We've created one for you, Dad!</h3>
         </div>
 
-        <div>
+        <div class="text">
             <p>
                 We wat to empower fathers to parent with confidence and enjoy more quality time with their kids.
             </p>
