Complete 03-Javascript and uploaded final challenge as jschallenges.js

--- a/03-Javascript/Programming Languages with JavaScript/index.html
+++ b/03-Javascript/Programming Languages with JavaScript/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grade Calculator</title>
+    <title>Retirement Calculator</title>
     <script src="script.js"></script>
 </head>
 
 <body>
+    <h1>Retirement Calculator</h1>
+    <input type="text" onblur="calculateYearsUntilRetirement(event)">
 
-    <div>
-        <h1>Grade Calculator</h1>
-        <input type="text" onblur="handleCalculateGrade(event)">
-    </div>
+    <h1>Greeting Translator</h1>
+    <input type="text" onblur="getGreetingInFrench(event)">
 
 </body>
 
